Complete my personal page

--- a/group/members/22120434/22120434.html
+++ b/group/members/22120434/22120434.html
@@ -2,27 +2,26 @@
 <html lang="vi">
 
 <head>
-    <title>22120435</title>
+    <title>22120434</title>
     <link rel="stylesheet" type="text/css" href="../stylePerson.css">
 </head>
 
 <body>
     <h1>Student Profile</h1>
     <div class="profile">
-        <img src="./images/22120435.jpg" alt="Profile Pictures">
+        <img src="./images/22120434.jpg" alt="Profile Pictures">
         <div>
             <p>Personal Infomation</p>
             <ul>
-                <li><b>Tên: </b>Nguyễn Quốc Vinh</li>
-                <li><b>MSSV: </b>22120435</li>
-                <li><b>Email: </b>myMail123@gmail.com</li>
-                <li><b>Số điện thoại: </b>0818333036</li>
-                <li><b>Địa chỉ: </b>Đồng Tháp</li>
-                <li><b>Ngày sinh: </b>02/12/2004</li>
+                <li><b>Tên: </b>Lê Thành Vinh</li>
+                <li><b>MSSV: </b>22120434</li>
+                <li><b>Email: </b>myMail133@gmail.com</li>
+                <li><b>Số điện thoại: </b>0349333566</li>
+                <li><b>Địa chỉ: </b>Long An</li>
+                <li><b>Ngày sinh: </b>01/11/2004</li>
             </ul>
             <a href="../../default.html" target="_blank">Trở lại màn hình chính</a>
         </div>
     </div>
 </body>
-
 </html>
