--- a/group/default.html
+++ b/group/default.html
@@ -6,12 +6,28 @@
 </head>
 <body>
     <h1><b>Group...</b></h1>
-    <img src="./images/group_img.jpg" alt="A picture of members" usemap="#detail-map">
-    <map name="detail-map">
-        <area shape="rect" coords="127,362,2,133" href="./members/22120435/22120435.html">
-        <area shape="rect" coords="130,134,326,362" href="./members/22120434/22120434.html">
-        <area shape="rect" coords="320,0,482,362" href="./members/22120376/22120376.html">
-    </map>
+    <img
+    src="./images/group_img.png"
+    alt="A picture of members"
+    usemap="#image-map"
+  />
+  <map name="image-map">
+    <area
+      coords="136,263,193,285,235,338,220,447,197,467,161,524,118,549,53,535,26,483,13,451,7,396,10,339,31,295,83,269"
+      shape="poly"
+      href="./members/22120435/22120435.html"
+    />
+    <area
+      coords="446,263,505,271,538,303,558,350,555,399,547,452,541,503,509,543,463,562,401,555,368,511,352,438,351,398,352,368,350,323,372,304,402,279"
+      shape="poly"
+      href="./members/22120434/22120434.html"
+    />
+    <area
+      coords="688,270,743,262,790,279,808,297,814,327,808,370,808,417,801,460,766,492,726,494,682,465,670,435,651,391,639,374,629,322,655,292"
+      shape="poly"
+      href="./members/22120376/22120376.html"
+    />
+  </map>
     <div class="detail-infor">
         <h2>Detail information</h2>
         <p>Group members</p>
