update-image-map

--- a/group/default.html
+++ b/group/default.html
@@ -6,26 +6,31 @@
   </head>
   <body>
     <h1><b>Group...</b></h1>
+
     <img
       src="./images/group_img.jpg"
       alt="A picture of members"
       usemap="#image-map"
     />
+
     <map name="image-map">
       <area
-        coords="2,941,43,1079,158,1188,307,1183,403,1083,484,972,490,893,513,766,482,689,436,655,358,591,235,580,58,642,12,788"
+        coords="113.5,285.5,34,310.5,9,382,16,509,45,564,102,595,166,588,225,512,263.5,384.5,205,294.5"
         shape="poly"
         href="./members/22120435/22120435.html"
+        alt="Member 1"
       />
       <area
-        coords="871,605,772,677,745,998,795,1101,871,1192,980,1235,1111,1208,1175,1149,1210,1076,1258,1007,1254,914,1214,774,1192,685,1138,603,1056,568,988,568"
+        coords="445,293,371,364,373.5,479.5,395.5,572,473,622,555.5,603.5,630.5,603.5,630.5,508.5,613,359.5,544.5,286"
         shape="poly"
         href="./members/22120434/22120434.html"
+        alt="Member 2"
       />
       <area
-        coords="1550,578,1449,617,1371,710,1402,823,1431,920,1474,1004,1531,1054,1589,1079,1671,1076,1731,1033,1768,959,1780,885,1780,815,1766,733,1778,675,1750,613,1659,572"
+        coords="733,295.5,686,347.5,702,461.5,780.5,538.5,850.5,531,892,476,894.5,349.5,848.5,282.5"
         shape="poly"
         href="./members/22120376/22120376.html"
+        alt="Member 3"
       />
     </map>
     <div class="detail-infor">
@@ -38,11 +43,11 @@
       </ul>
     </div>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/image-map-resizer/1.0.10/js/imageMapResizer.min.js"></script>
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/image-map-resizer/1.0.10/js/imageMapResizer.min.js"></script>
     <script>
       window.onload = function () {
         imageMapResize();
       };
-    </script>
+    </script> -->
   </body>
 </html>
