--- a/group/members/22120435/22120435.html
+++ b/group/members/22120435/22120435.html
@@ -20,7 +20,7 @@
                 <li><b>Địa chỉ: </b>Đồng Tháp</li>
                 <li><b>Ngày sinh: </b>02/12/2004</li>
             </ul>
-            <a href="../../default.html" target="_blank">Trở lại màn hình chính</a>
+            <a href="../../default.html" target="_self">Trở lại màn hình chính</a>
         </div>
     </div>
 </body>
