Fix bug where all images are in one size

--- a/group/members/22120434/22120434.html
+++ b/group/members/22120434/22120434.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Student Profile</h1>
     <div class="profile">
-        <img src="./images/22120434.jpg" alt="Profile Pictures">
+        <img class="img-profile"src="./images/22120434.jpg" alt="Profile Pictures">
         <div>
             <p>Personal Infomation</p>
             <ul>
