--- a/group/members/22120376/22120376.html
+++ b/group/members/22120376/22120376.html
@@ -8,7 +8,7 @@
   <body>
     <h1>Student Profile</h1>
     <div class="profile">
-      <img src="./images/22120376.jpg" alt="Profile Pictures" />
+      <img class="img-profile" src="./images/22120376.jpg" alt="Profile Pictures" />
       <div>
         <p>Personal Infomation</p>
         <ul>
