--- a/group/members/22120376/22120376.html
+++ b/group/members/22120376/22120376.html
@@ -6,11 +6,15 @@
   </head>
 
   <body>
-    <h1>Student Profile</h1>
+    <h1 class="inner-header">Student Profile</h1>
     <div class="profile">
-      <img class="img-profile" src="./images/22120376.jpg" alt="Profile Pictures" />
-      <div>
-        <p>Personal Infomation</p>
+      <img
+        class="img-profile"
+        src="./images/22120376.jpg"
+        alt="Profile Pictures"
+      />
+      <div class="inner-desc">
+        <h2>Personal Infomation</h2>
         <ul>
           <li><b>Tên: </b>Nguyễn Đức Toàn</li>
           <li><b>MSSV: </b>22120376</li>
@@ -19,7 +23,9 @@
           <li><b>Địa chỉ: </b>Long An</li>
           <li><b>Ngày sinh: </b>13/07/2004</li>
         </ul>
-        <a href="../../default.html" target="_blank">Trở lại màn hình chính</a>
+        <div class="button">
+          <a href="../../default.html" target="_self">Trở lại màn hình chính</a>
+        </div>
       </div>
     </div>
   </body>
