--- a/group/members/22120434/22120434.html
+++ b/group/members/22120434/22120434.html
@@ -1,27 +1,30 @@
 <!DOCTYPE html>
 <html lang="vi">
-
-<head>
+  <head>
     <title>22120434</title>
-    <link rel="stylesheet" type="text/css" href="../stylePerson.css">
-</head>
+    <link rel="stylesheet" type="text/css" href="../stylePerson.css" />
+  </head>
 
-<body>
+  <body>
     <h1>Student Profile</h1>
     <div class="profile">
-        <img class="img-profile"src="./images/22120434.jpg" alt="Profile Pictures">
-        <div>
-            <p>Personal Infomation</p>
-            <ul>
-                <li><b>Tên: </b>Lê Thành Vinh</li>
-                <li><b>MSSV: </b>22120434</li>
-                <li><b>Email: </b>myMail133@gmail.com</li>
-                <li><b>Số điện thoại: </b>0349333566</li>
-                <li><b>Địa chỉ: </b>Long An</li>
-                <li><b>Ngày sinh: </b>01/11/2004</li>
-            </ul>
-            <a href="../../default.html" target="_blank">Trở lại màn hình chính</a>
-        </div>
+      <img
+        class="img-profile"
+        src="./images/22120434.jpg"
+        alt="Profile Pictures"
+      />
+      <div>
+        <p>Personal Infomation</p>
+        <ul>
+          <li><b>Tên: </b>Lê Thành Vinh</li>
+          <li><b>MSSV: </b>22120434</li>
+          <li><b>Email: </b>myMail133@gmail.com</li>
+          <li><b>Số điện thoại: </b>0349333566</li>
+          <li><b>Địa chỉ: </b>Long An</li>
+          <li><b>Ngày sinh: </b>01/11/2004</li>
+        </ul>
+        <a href="../../default.html" target="_self">Trở lại màn hình chính</a>
+      </div>
     </div>
-</body>
+  </body>
 </html>
