format Student Profile and update mem-desc

--- a/group/members/22120434/22120434.html
+++ b/group/members/22120434/22120434.html
@@ -6,15 +6,15 @@
   </head>
 
   <body>
-    <h1>Student Profile</h1>
+    <h1 class="inner-header">Student Profile</h1>
     <div class="profile">
       <img
         class="img-profile"
         src="./images/22120434.jpg"
         alt="Profile Pictures"
       />
-      <div>
-        <p>Personal Infomation</p>
+      <div class="inner-desc">
+        <h2>Personal Infomation</h2>
         <ul>
           <li><b>Tên: </b>Lê Thành Vinh</li>
           <li><b>MSSV: </b>22120434</li>
@@ -23,7 +23,9 @@
           <li><b>Địa chỉ: </b>Long An</li>
           <li><b>Ngày sinh: </b>01/11/2004</li>
         </ul>
-        <a href="../../default.html" target="_self">Trở lại màn hình chính</a>
+        <div class="button">
+          <a href="../../default.html" target="_self">Trở lại màn hình chính</a>
+        </div>
       </div>
     </div>
   </body>
