--- a/group/members/22120435/22120435.html
+++ b/group/members/22120435/22120435.html
@@ -1,28 +1,32 @@
 <!DOCTYPE html>
 <html lang="vi">
-
-<head>
+  <head>
     <title>22120435</title>
-    <link rel="stylesheet" type="text/css" href="../stylePerson.css">
-</head>
+    <link rel="stylesheet" type="text/css" href="../stylePerson.css" />
+  </head>
 
-<body>
-    <h1>Student Profile</h1>
+  <body>
+    <h1 class="inner-header">Student Profile</h1>
     <div class="profile">
-        <img class="img-profile" src="./images/22120435.jpg" alt="Profile Pictures">
-        <div>
-            <p>Personal Infomation</p>
-            <ul>
-                <li><b>Tên: </b>Nguyễn Quốc Vinh</li>
-                <li><b>MSSV: </b>22120435</li>
-                <li><b>Email: </b>myMail123@gmail.com</li>
-                <li><b>Số điện thoại: </b>0818333036</li>
-                <li><b>Địa chỉ: </b>Đồng Tháp</li>
-                <li><b>Ngày sinh: </b>02/12/2004</li>
-            </ul>
-            <a href="../../default.html" target="_self">Trở lại màn hình chính</a>
+      <img
+        class="img-profile"
+        src="./images/22120435.jpg"
+        alt="Profile Pictures"
+      />
+      <div class="inner-desc">
+        <h2>Personal Infomation</h2>
+        <ul>
+          <li><b>Tên: </b>Nguyễn Quốc Vinh</li>
+          <li><b>MSSV: </b>22120435</li>
+          <li><b>Email: </b>myMail123@gmail.com</li>
+          <li><b>Số điện thoại: </b>0818333036</li>
+          <li><b>Địa chỉ: </b>Đồng Tháp</li>
+          <li><b>Ngày sinh: </b>02/12/2004</li>
+        </ul>
+        <div class="button">
+          <a href="../../default.html" target="_self">Trở lại màn hình chính</a>
         </div>
+      </div>
     </div>
-</body>
-
+  </body>
 </html>
