--- a/group/default.html
+++ b/group/default.html
@@ -1,22 +1,19 @@
 <!DOCTYPE html>
 <html>
-
-<head>
+  <head>
     <title>Personal Information</title>
     <link rel="stylesheet" type="text/css" href="./default.css" />
-
   </head>
   <body>
     <h1><b>Group...</b></h1>
 
-
-<body>
-    <h1><b>Group...</b></h1>
-
-    <img src="./images/group_img.jpg" alt="A picture of members" usemap="#image-map" />
+    <img
+      src="./images/group_img.jpg"
+      alt="A picture of members"
+      usemap="#image-map"
+    />
 
     <map name="image-map">
-
       <area
         coords="113.5,285.5,34,310.5,9,382,16,509,45,564,102,595,166,588,225,512,263.5,384.5,205,294.5"
         shape="poly"
@@ -35,43 +32,41 @@
         href="./members/22120376/22120376.html"
         alt="Member 3"
       />
-
     </map>
     <div class="detail-infor-container">
-        <h2>Detail information</h2>
-        <div class="header">
-            <div class="text-header">Group members</div>
-            <div class="underline"></div>
+      <h2>Detail information</h2>
+      <div class="header">
+        <div class="text-header">Group members</div>
+        <div class="underline"></div>
+      </div>
+      <div class="list-container">
+        <div class="person-container">
+          <img src="./members/22120435/images/22120435_00.jpg" alt="22120435" />
+          <div class="short-describe"><b>Nguyễn Quốc Vinh-22120435</b></div>
+          <div class="full-describe">
+            Chuyên ngành : Kỹ thuật phần mềm-Khoa: Công nghệ thông tin. Mong
+            muốn được học được tìm hiểu, học tập, những kiến thức mới, những kĩ
+            năng mới.
+          </div>
         </div>
-        <div class="list-container">
 
-            <div class="person-container">
-                <img src="./members/22120435/images/22120435_00.jpg" alt="22120435" />
-                <div class="short-describe"><b>Nguyễn Quốc Vinh-22120435</b></div>
-                <div class="full-describe">
-                    Chuyên ngành : Kỹ thuật phần mềm-Khoa: Công nghệ thông tin.
-                    Mong muốn được học được tìm hiểu, học tập, những kiến thức mới, 
-                    những kĩ năng mới.
-                </div>
-            </div>
-
-            <div class="person-container">
-                <img src="./members/22120434/images/22120434_00.jpg" alt="22120434" />
-                <div class="short-describe">NQVinh-SE</div>
-                <div class="full-describe">
-                    Some thing special here
-                </div>
-            </div>
-
-            <div class="person-container">
-                <img src="./members/22120434/images/22120434_00.jpg" alt="22120434" />
-                <div class="short-describe">sdas</div>
-                <div class="full-describe">
-                    Some thing special here
-                </div>
-            </div>
-
+        <div class="person-container">
+          <img src="./members/22120376/images/22120376_00.jpg" alt="22120376" />
+          <div class="short-describe"><b>Nguyễn Đức Toàn-22120376</b></div>
+          <div class="full-describe">
+            Khoa: Công nghệ thông tin. <br />
+            Chuyên ngành: Công nghệ thông tin. <br />
+            Mong muốn được tìm hiểu, học hỏi, phát huy những kiến thức, kĩ năng
+            của bản thân.
+          </div>
         </div>
-</body>
 
+        <div class="person-container">
+          <img src="./members/22120434/images/22120434_00.jpg" alt="22120434" />
+          <div class="short-describe">sdas</div>
+          <div class="full-describe">Some thing special here</div>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
