complete personal profile and fix image personal

--- a/group/default.html
+++ b/group/default.html
@@ -39,10 +39,11 @@
             </div>
 
             <div class="person-container">
-                <img src="./members/22120434/images/22120434_00.jpg" alt="22120434" />
-                <div class="short-describe">NQVinh-SE</div>
+                <img src="./members/22120434/images/22120434.jpg" alt="22120434" />
+                <div class="short-describe"><b>Lê Thành Vinh-22120434</b></div>
                 <div class="full-describe">
-                    Some thing special here
+                    Chuyên ngành : Kỹ thuật phần mềm-Khoa: Công nghệ thông tin.
+                    Mong muốn được học hỏi những kiến thức mới, những kĩ năng mới, rèn luyện đạo đức.
                 </div>
             </div>
 
