--- a/group/members/22120435/22120435.html
+++ b/group/members/22120435/22120435.html
@@ -24,7 +24,7 @@
           <li><b>Ngày sinh: </b>02/12/2004</li>
         </ul>
         <div class="button">
-          <a href="../../default.html" target="_self">Trở lại màn hình chính</a>
+          <a href="../../index.html" target="_self">Trở lại màn hình chính</a>
         </div>
       </div>
     </div>
