--- a/group/index.html
+++ b/group/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" type="text/css" href="./default.css" />
   </head>
   <body>
-    <h1><b>Group...</b></h1>
+    <h1 class="title"><b>Group Picture</b></h1>
 
     <img
       src="./images/group_img.jpg"
@@ -34,7 +34,7 @@
       />
     </map>
     <div class="detail-infor-container">
-      <h2>Detail information</h2>
+      <h2 class="title">Detail information</h2>
       <div class="header">
         <div class="text-header">Group members</div>
         <div class="underline"></div>
@@ -44,9 +44,10 @@
           <img src="./members/22120435/images/22120435_00.jpg" alt="22120435" />
           <div class="short-describe"><b>Nguyễn Quốc Vinh-22120435</b></div>
           <div class="full-describe">
-            Chuyên ngành : Kỹ thuật phần mềm-Khoa: Công nghệ thông tin. Mong
-            muốn được học được tìm hiểu, học tập, những kiến thức mới, những kĩ
-            năng mới.
+            Khoa: Công nghệ thông tin. <br />
+            Chuyên ngành : Kỹ thuật phần mềm. <br />
+            Mong muốn được học được tìm hiểu, học tập, những kiến thức mới,
+            những kĩ năng mới.
           </div>
         </div>
 
@@ -65,11 +66,12 @@
           <img src="./members/22120434/images/22120434.jpg" alt="22120434" />
           <div class="short-describe"><b>Lê Thành Vinh-22120434</b></div>
           <div class="full-describe">
-              Some thing special here
-              Chuyên ngành : Kỹ thuật phần mềm-Khoa: Công nghệ thông tin.
-              Mong muốn được học hỏi những kiến thức mới, những kĩ năng mới, rèn luyện đạo đức.
+            Khoa: Công nghệ thông tin. <br />
+            Chuyên ngành : Kỹ thuật phần mềm <br />
+            Mong muốn được học hỏi những kiến thức mới, những kĩ năng mới, rèn
+            luyện đạo đức.
           </div>
-      </div>
+        </div>
       </div>
     </div>
   </body>
